syntax = "proto3";

option csharp_namespace = "MyKudos.Recognition.gRPC";

import "google/protobuf/empty.proto";

message RecognitionRequest{};

message RecognitionResponse {
	string id = 1;
	string Emoji = 2;
    string Description = 3;    
}

message PaginatedRecognitionsResponse{
	//int32 pageIndex = 1;
	//int32 pageSize = 2;
	//int64 count = 3;
	repeated RecognitionResponse data = 1;
}

service RecognitionService {

rpc GetRecognitions (google.protobuf.Empty) returns (PaginatedRecognitionsResponse);
}